...
        paletteView?.colors = palette.colorData
        paletteImageView?.image = palette.image
    }
    
    private func _createSubviews(){
        
        accessibilityLabel = "PaletteItem"

        let container = { () -> UIStackView in
            
            let parent = UIView()
            parent.layer.cornerRadius = 5.0
            parent.layer.masksToBounds = true
...
