...
    
    func didSelectUserImage(creator:UIViewController, image: UIImage, id:String){
        
        // Setup Container VC

        let containerVC =  ActionContainer()
        containerVC.actionButtonText = "Save"
        containerVC.navigationItem.leftBarButtonItem = UIBarButtonItem(
            barButtonSystemItem: .cancel, target: creator, action: #selector(creator.targetDismiss)
        )
        
        // Setup Palette Detail

...
